# Logstalgia

./: .gitignore  CNAME  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  THANKS  autogen.sh  configure  configure.ac  index.html  logstalgia.pro  logstalgia.win32.cbp
cmd/: logstalgia  logstalgia.cmd
css/: site.css
data/: ball.tga  logstalgia.1
debian/: changelog  control  copyright  rules
dev/nsis/: welcome.xcf
m4/: ax_check_gl.m4
src/: Makefile.in  apache.cpp  apache.h  ball.cpp  ball.h  configwatcher.cpp  configwatcher.h  custom.cpp  custom.h  logentry.cpp  logentry.h  logstalgia.cpp  logstalgia.h  main.cpp  main.h  ncsa.cpp  ncsa.h  paddle.cpp  paddle.h  ppm.cpp  ppm.h  requestball.cpp  requestball.h  settings.cpp  settings.h  slider.cpp  slider.h  summarizer.cpp  summarizer.h  tests.cpp  tests.h  textarea.cpp  textarea.h
src/FileWatcher/: FileWatcher.cpp  FileWatcher.h  FileWatcherImpl.h  FileWatcherLinux.cpp  FileWatcherLinux.h  FileWatcherOSX.cpp  FileWatcherOSX.h  FileWatcherWin32.cpp  FileWatcherWin32.h
src/core/: Makefile.in  display.cpp  fxfont.cpp  fxfont.h  regex.cpp  regex.h  seeklog.cpp  seeklog.h  stringhash.cpp  stringhash.h
